# sfml-engine

./: .gitignore  CMakeLists.txt
engine/src/: ILua.cpp  ILua.hpp  engine.cpp  engine.hpp
examples/imgui/: main.cpp
examples/simple/: main.cpp  simple.cpp  simple.hpp
